update on build issues

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "node dist/server.js",
     "seed": "ts-node src/scripts/seed-dropdowns.ts",
     "lint": "eslint . --ext .ts",
-    "test": "jest"
+    "test": "jest",
+    "vercel-build": "npm run build"
   },
   "keywords": [
     "cybersecurity",
