--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc && cp ./package.json ./dist",
     "start": "node dist/server.js",
     "seed": "ts-node src/scripts/seed-dropdowns.ts",
+    "seed:admin": "ts-node src/scripts/seed-admin.ts",
     "lint": "eslint . --ext .ts",
     "test": "jest",
     "vercel-build": "npm run build"
